--- a/style.css
+++ b/style.css
@@ -1,15 +1,58 @@
 /* Root html objects */
 body{
-    background-color: rgb(210, 210, 210);
+    background-color: rgb(200, 200, 200);
     font-family: Roboto, sans-serif;
 }
 
-/* h1, h2, h3{
-    text-align: center;
-} */
+.work-term-background-gradiant{
+    background-image: linear-gradient(#ff8b01, #eb1c01);
+}
 
+.container {
+    background-color: rgb(240, 240, 240); 
+    border-radius: 12px; 
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
+    padding: 20px; 
+    margin: 5px 50px 20px 50px;
+}
+
+.center {
+    text-align: center;
+}
+
+h1 {
+    font-size: 42px;
+    margin-bottom: 16px;
+    text-align: center;
+    text-decoration: dashed;
+    font-weight: 600;
+}
+
+h2 {
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+p {
+    font-size: 20px;
+    padding: 0 20px;
+    margin-bottom: 20px;
+    text-align:start;
+}
+
+.text-list {
+    font-size: 20px;
+}
+
+.top-spacing {
+    margin-top: 25px;
+}
+
+/* ----------------------- NAV BAR STYLES ---------------------------------- */
 nav{
-    background-color: rgb(6, 40, 61);
+    background-color: rgb(37, 37, 37);
     font-size: 1em;
     display: flex;
     flex-direction: row;
@@ -18,7 +61,6 @@ nav{
     margin: -0.5em;
 }
 
-/* Navbar styles ----------------------------------- */
 .nav-list{
     flex: 1;
     display: flex;
@@ -28,10 +70,39 @@ nav{
 .nav-list, .nav-list-item{
     display: inline-flex;
     margin: 0;
-    padding-left: 1em;
+    padding-left: 0.75em;
 }
 
-.nav-link{
+.nav-list :last-child .nav-link {
+    margin-left: 0.5em;
+}
+
+.img-single{
+    border: 2px solid black;
+    border-radius: 1em;
+    width: 100%;
+    height: 90%;
+}
+
+.link{
+    border: 2px solid rgb(19, 99, 223);
+    border-radius: 10px;
+    background-color: rgb(6, 40, 61);
+    color: rgb(223, 246, 255);
+    display: inline-block;
+    text-align: center;
+    padding: 0.5em 1em;
+    margin: 0.25em 0.5em;
+    text-decoration: none; 
+    transition: background-color 150ms ease-in;
+}
+
+.link:hover, .button-inspect:hover{
+    background-color: rgb(19, 99, 223);
+}
+
+/* DIFFERENT BUTTON STYLES FOR THE NAV BAR PER SITE */
+.nav-link-home{
     border: 1px solid rgb(71, 181, 255);    
     border-radius: 10px;
     background-color: rgb(19, 99, 223);
@@ -42,9 +113,21 @@ nav{
     transition: background-color 150ms ease-in;
 }
 
-.nav-link:hover{
+.nav-link-home:hover{
     background-color: rgb(71, 181, 255);
 }
-.nav-list :last-child .nav-link {
-    margin-left: 1em;
+
+.nav-link-WT1{
+    border: 1px solid rgb(104, 104, 104);    
+    border-radius: 10px;
+    background-color: rgb(192, 67, 250);
+    color: black;
+    text-decoration: none; 
+    display: inline-block;
+    padding: 0.5em 1em; 
+    transition: background-color 150ms ease-in;
+}
+
+.nav-link-WT1:hover{
+    background-color: rgb(99, 88, 255);
 }
