--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-/* Root html objects */
 body{
     background-color: rgb(200, 200, 200);
     font-family: Roboto, sans-serif;
 }
 
 .work-term-background-gradiant{
-    background-image: linear-gradient(#ff8b01, #eb1c01);
+    background-image: linear-gradient(#f7b462, #8d1404);
 }
 
 .container {
@@ -17,7 +16,24 @@ body{
 }
 
 .center {
+    flex: display;
+    align-content: center;
     text-align: center;
+    justify-content: center;
+}
+
+.img-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-header{
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 100px;
+    height: 100px;
+    margin-left: 20px;
 }
 
 h1 {
@@ -42,7 +58,7 @@ p {
     text-align:start;
 }
 
-.text-list {
+ol li, .text-list {
     font-size: 20px;
 }
 
@@ -118,9 +134,9 @@ nav{
 }
 
 .nav-link-WT1{
-    border: 1px solid rgb(104, 104, 104);    
+    border: 1px solid #faaf53;    
     border-radius: 10px;
-    background-color: rgb(192, 67, 250);
+    background-color: #faaf53;
     color: black;
     text-decoration: none; 
     display: inline-block;
@@ -129,5 +145,5 @@ nav{
 }
 
 .nav-link-WT1:hover{
-    background-color: rgb(99, 88, 255);
+    background-color: #ec523d;
 }
