--- a/style.css
+++ b/style.css
@@ -3,39 +3,6 @@ body{
     font-family: Roboto, sans-serif;
 }
 
-.work-term-background-gradiant{
-    background-image: linear-gradient(#f7b462, #8d1404);
-}
-
-.container {
-    background-color: rgb(240, 240, 240); 
-    border-radius: 12px; 
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
-    padding: 20px; 
-    margin: 5px 50px 20px 50px;
-}
-
-.center {
-    flex: display;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
-}
-
-.img-header-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.img-header{
-    border: 2px solid black;
-    border-radius: 20px;
-    width: 100px;
-    height: 100px;
-    margin-left: 20px;
-}
-
 h1 {
     font-size: 42px;
     margin-bottom: 16px;
@@ -60,6 +27,54 @@ p {
 
 ol li, .text-list {
     font-size: 20px;
+}
+
+.work-term-background-gradiant{
+    background-image: linear-gradient(#f7b462, #8d1404);
+}
+
+.container {
+    background-color: rgb(240, 240, 240); 
+    border-radius: 12px; 
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
+    padding: 20px; 
+    margin: 5px 50px 20px 50px;
+}
+
+.center {
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.img-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-header{
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 100px;
+    height: 100px;
+    margin-left: 20px;
+}
+
+.img-inline {
+    display: inline-block;
+    width: 20%;
+}
+
+.img-inline img {
+    max-width: 250px;
+    height: 400px;
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 6px;
+}
+
+.img-inline img:first-of-type{
+    margin-left: 60%;
 }
 
 .top-spacing {
