--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ ol li, .text-list {
     background-color: rgb(143, 211, 228);
 }
 
+.work-term-background-gradiant-three{
+    background-image: linear-gradient(#1ebe54, #23929f);
+}
+
+.work-term-background-gradiant-four{
+    background-color: linear-gradient(#fafafa, #0f0f0f);
+}
+
 .container {
     background-color: rgb(235, 235, 235); 
     border-radius: 12px; 
@@ -63,6 +71,15 @@ ol li, .text-list {
     border-radius: 20px;
     width: 100px;
     height: 100px;
+    margin-left: 20px;
+}
+
+.img-header-larger{
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 125px;
+    height: 125px;
+    padding: 1px;
     margin-left: 20px;
 }
 
@@ -180,7 +197,7 @@ nav{
 }
 
 .nav-link-WT2{
-    border: 1px solid #000000;    
+    border: 1px solid #00226d;    
     border-radius: 10px;
     background-color: #0077ff;
     color: black;
@@ -192,4 +209,34 @@ nav{
 
 .nav-link-WT2:hover{
     background-color: #a57eff;
+}
+
+.nav-link-WT3{
+    border: 1px solid #005207;    
+    border-radius: 10px;
+    background-color: #1ee25f;
+    color: black;
+    text-decoration: none; 
+    display: inline-block;
+    padding: 0.5em 1em; 
+    transition: background-color 150ms ease-in;
+}
+
+.nav-link-WT3:hover{
+    background-color: #16a946;
+}
+
+.nav-link-WT4{
+    border: 1px solid #003441;    
+    border-radius: 10px;
+    background-color: #26cfe2;
+    color: black;
+    text-decoration: none; 
+    display: inline-block;
+    padding: 0.5em 1em; 
+    transition: background-color 150ms ease-in;
+}
+
+.nav-link-WT4:hover{
+    background-color: #17a6b6;
 }
